<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UI.MainActivity">

    <EditText
        android:id="@+id/login_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/eightdp"
        android:layout_marginTop="@dimen/eightdp"
        android:hint="@string/enter_your_password_here_to_signin"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.479" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/eightdp"
        android:layout_marginEnd="@dimen/eightdp"
        android:layout_marginLeft="@dimen/eightdp"
        android:layout_marginRight="@dimen/eightdp"
        android:layout_marginStart="@dimen/eightdp"
        android:layout_marginTop="@dimen/eightdp"
        android:text="@string/upcoming_movies"
        android:textSize="@dimen/twofivesp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.058" />

    <EditText
        android:id="@+id/login_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/eightdp"
        android:layout_marginTop="@dimen/eightdp"
        android:hint="@string/enter_your_email_here_to_signin"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.388" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/eightdp"
        android:layout_marginEnd="@dimen/eightdp"
        android:layout_marginLeft="@dimen/eightdp"
        android:layout_marginRight="@dimen/eightdp"
        android:layout_marginStart="@dimen/eightdp"
        android:layout_marginTop="@dimen/eightdp"
        android:onClick="userlogin"
        android:text="@string/login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.622" />

    <ProgressBar
        android:id="@+id/pbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/eightdp"
        android:layout_marginEnd="@dimen/eightdp"
        android:layout_marginLeft="@dimen/eightdp"
        android:layout_marginRight="@dimen/eightdp"
        android:layout_marginStart="@dimen/eightdp"
        android:layout_marginTop="@dimen/eightdp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.771" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/eightdp"
        android:layout_marginEnd="@dimen/eightdp"
        android:layout_marginLeft="@dimen/eightdp"
        android:layout_marginRight="@dimen/eightdp"
        android:layout_marginStart="@dimen/eightdp"
        android:layout_marginTop="@dimen/eightdp"
        android:text="@string/dont_have_an_account"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.859" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/eightdp"
        android:layout_marginEnd="@dimen/eightdp"
        android:layout_marginLeft="@dimen/eightdp"
        android:layout_marginRight="@dimen/eightdp"
        android:layout_marginStart="@dimen/eightdp"
        android:layout_marginTop="@dimen/eightdp"
        android:onClick="register"
        android:text="@string/register_here"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.984" />
</android.support.constraint.ConstraintLayout>