<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UI.RegisterActivity">

    <EditText
        android:id="@+id/register_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/eightdp"
        android:layout_marginTop="@dimen/eightdp"
        android:hint="@string/registerhere"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.479"
        tools:ignore="HardcodedText" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/eightdp"
        android:layout_marginEnd="@dimen/eightdp"
        android:layout_marginLeft="@dimen/eightdp"
        android:layout_marginRight="@dimen/eightdp"
        android:layout_marginStart="@dimen/eightdp"
        android:layout_marginTop="@dimen/eightdp"
        android:text="@string/upcoming_movies"
        android:textSize="@dimen/twofivesp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.058" />

    <EditText
        android:id="@+id/register_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/eightdp"
        android:layout_marginTop="@dimen/eightdp"
        android:hint="@string/enter_your_email_here_to_register"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.388" />

    <ProgressBar
        android:id="@+id/progressbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/eightdp"
        android:layout_marginEnd="@dimen/eightdp"
        android:layout_marginLeft="@dimen/eightdp"
        android:layout_marginRight="@dimen/eightdp"
        android:layout_marginStart="@dimen/eightdp"
        android:layout_marginTop="@dimen/eightdp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.765" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/eightdp"
        android:layout_marginEnd="@dimen/eightdp"
        android:layout_marginLeft="@dimen/eightdp"
        android:layout_marginRight="@dimen/eightdp"
        android:layout_marginStart="@dimen/eightdp"
        android:layout_marginTop="@dimen/eightdp"
        android:onClick="registeruser"
        android:text="@string/register"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.622" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/eightdp"
        android:layout_marginEnd="@dimen/eightdp"
        android:layout_marginLeft="@dimen/eightdp"
        android:layout_marginRight="@dimen/eightdp"
        android:layout_marginStart="@dimen/eightdp"
        android:layout_marginTop="@dimen/eightdp"
        android:text="@string/already_have_an_account"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.859" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/eightdp"
        android:layout_marginEnd="@dimen/eightdp"
        android:layout_marginLeft="@dimen/eightdp"
        android:layout_marginRight="@dimen/eightdp"
        android:layout_marginStart="@dimen/eightdp"
        android:layout_marginTop="@dimen/eightdp"
        android:onClick="signin"

        android:text="@string/signin_here"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.984" />
</android.support.constraint.ConstraintLayout>