<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/widgetbackground"
    android:orientation="vertical"
    android:padding="@dimen/widget_margin">

    <TextView
        android:id="@+id/appwidget_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/eightdp"
        android:layout_marginEnd="@dimen/eightdp"
        android:layout_marginLeft="@dimen/eightdp"
        android:layout_marginRight="@dimen/eightdp"
        android:layout_marginStart="@dimen/eightdp"
        android:layout_marginTop="@dimen/eightdp"
        android:text="@string/upcoming_movies"
        android:textSize="@dimen/twofivesp" />


    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/eightdp"
        android:layout_marginEnd="@dimen/eightdp"
        android:layout_marginLeft="@dimen/eightdp"
        android:layout_marginRight="@dimen/eightdp"
        android:layout_marginStart="@dimen/eightdp"
        android:layout_marginTop="@dimen/eightdp"
        android:text="@string/select_a_movie_and"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.277"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/reviews"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/eightdp"
        android:layout_marginEnd="@dimen/eightdp"
        android:layout_marginLeft="@dimen/eightdp"
        android:layout_marginRight="@dimen/eightdp"
        android:layout_marginStart="@dimen/eightdp"
        android:layout_marginTop="@dimen/eightdp"
        android:text="@string/open_suggestions_to_add_details_to_widget"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.748"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />





</LinearLayout>